--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- 3D Model (Pasta) at specific coordinates -->
     <a-entity 
-      gps-entity-place="latitude: 37.7749; longitude: -122.4194"  <!-- Replace with your coordinates -->
+      gps-entity-place="latitude: 37.7749; longitude: -122.4194"  
       gltf-model="url(pasta.glb)"
       scale="2 2 2"
       rotation="0 180 0"
